--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "set-cookie-parser": "^2.7.0",
     "use-debounce": "^10.0.2",
     "zod": "^3.23.8"
   },
